# GotiDesk

./: README.md  README.zh-CN.md  README.zh-TW.md  package.json  pnpm-lock.yaml  resize.ps1
.github/workflows/: release.yml
src/: App.svelte  app.css  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  test_notif.rs  websocket.rs
src/components/: Logo.svelte
src/lib/: FontSelect.svelte  i18n.ts
