[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
font-kit = "0.14.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "^2.0.0"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
url = "2.5.8"
tokio = { version = "1.52.3", features = ["full"] }
tauri-plugin-notification = "^2.0.0"
reqwest = { version = "0.13.3", features = ["json"] }
tauri-winrt-notification = "0.7.2"
lazy_static = "1.5.0"
winreg = "0.56.0"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
